# rag-on-csv

./: .dockerignore  .gitignore  CODEBASE_ISSUES.md  CONTEXT_MEMORY_GUIDE.md  README.md  context_memory_demo.py  docker-compose.yml  main.py  pyproject.toml  streamlit_app.py
csv_qa/: __init__.py  config.py  context_memory.py  data_handler.py  enhanced_vector_search.py  exceptions.py  fuzzy_matcher.py  hybrid_engine.py  ollama_client.py  question_answerer.py  question_parser.py  question_router.py  semantic_search.py  structured_query_engine.py  vector_search.py
docker/: Dockerfile  Dockerfile.dev  ollama-entrypoint.sh
sample_data/: bookshop.csv  lab_data.csv
tests/: conftest.py  test_exceptions.py  test_ollama_client.py  test_runner.py  test_semantic_search.py
tests/fixtures/: context_memory_fixtures.py  expected_responses.py
tests/integration/: test_context_memory_integration.py  test_csv_qa_integration.py
tests/test_data/: sound_measurements.csv
