[tool.poetry]
name = "rag-on-csv"
version = "0.2.0"
description = "A RAG-based question answering system for CSV data with conversational AI and context memory"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "csv_qa"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<4.0"
pandas = "^2.0.0"
numpy = "^1.24.0"
scikit-learn = "^1.2.0"
requests = "^2.28.0"
streamlit = "^1.45.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
rag-csv = "main:main"
rag-csv-web = "streamlit_app:main"
